Add comments to our engineering blog.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ---
 layout: default
+image: at-chevron_4096x4096.png
 ---
 
 <div class="home">
@@ -27,7 +28,6 @@ layout: default
         <p><a class="btn btn-sm btn-primary" href="{{ site.github.url }}{{ post.url }}" role="button">Read more… <i class="fa fa-arrow-circle-right"></i></a>
         </p>
         {% endif %}
-
       </li>
     {% endfor %}
   </ul>
